sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:10: error: '{' expected but 'case' found.
    case ROUGE) =>
    ^